Downgrade to 17 version